plugins {
    id 'org.springframework.boot' version '2.1.3.RELEASE' apply false
    id 'java'
    id 'application'
}

apply from: 'dependencies.gradle'
allprojects {
	apply plugin: 'java'
	apply plugin: 'maven'
	apply plugin: 'application'
    repositories {
		mavenLocal()
		maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
		maven{ url 'https://jitpack.io'}
    }
    group = 'com.yoga'
    version = '1.0.0'
	jar {
		enabled = true
	}
	startScripts {
		enabled = false
	}

	distZip.classifier = 'shadow'
	distTar.classifier = 'shadow'
}

subprojects {
	apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    dependencyManagement {
        imports {
            mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
        }
    }
	jar {
		enabled = true
	}
	bootJar {
		enabled = false
	}

    sourceCompatibility = 1.8
    targetCompatibility = 1.8
    [compileJava,compileTestJava,javadoc]*.options*.encoding = 'UTF-8'
    dependencies {
		implementation libraries['spring-boot-starter']
		implementation libraries['spring-boot-starter-parent']
		implementation libraries['spring-boot-starter-web']
		implementation libraries['spring-boot-starter-amqp']
		implementation libraries['spring-boot-actuator']
		implementation libraries['spring-boot-starter-data-jpa']
		implementation libraries['spring-boot-dependencies']
		implementation libraries['spring-boot-configuration-processor']
		implementation libraries['spring-boot-starter-test']

		implementation libraries['camel-parent']
		implementation libraries['spring-boot-starter-jdbc']
		implementation libraries['spring-tx']
		implementation libraries['spring-jdbc']
		implementation libraries['spring-boot-starter-tomcat']
		implementation libraries['spring-boot-starter-data-redis']
		implementation libraries['spring-boot-starter-freemarker']
		implementation libraries['spring-boot-starter-aop']
		implementation libraries['spring-boot-starter-log4j2']

		implementation libraries['commons-lang3']
		implementation libraries['commons-codec']
		implementation libraries['commons-fileupload']
		implementation libraries['commons-httpclient']

		implementation libraries['h2']
		implementation libraries['guava']
		implementation libraries['redisson']
		implementation libraries['jedis']
		implementation libraries['core']
		implementation libraries['qrgen']
		implementation libraries['pinyin4j']

		implementation libraries['commons-io']
		implementation libraries['commons-lang3']
		implementation libraries['commons-codec']

		implementation libraries['mybatis-spring-boot-starter']
		implementation libraries['mapper']
		implementation libraries['mapper-spring-boot-starter']
		implementation libraries['pagehelper-spring-boot-starter']

		implementation libraries['json']
		implementation libraries['fastjson']
		implementation libraries['gson']

		implementation libraries['shiro-core']
		implementation libraries['shiro-spring']
		implementation libraries['shiro-web']
		implementation libraries['shiro-ehcache']

		implementation libraries['retrofit']
		implementation libraries['converter-gson']
		implementation libraries['logging-interceptor']

		implementation libraries['dom4j']
		implementation libraries['jpinyin']
		implementation libraries['lombok']
		implementation libraries['springfox-swagger2']

		runtimeOnly libraries['mysql-driver']
		testImplementation libraries['spring-boot-starter-test']
	}
	configurations.all {
		exclude group: 'ch.qos.logback', module: 'logback-classic'
		exclude group: 'javax.persistence', module: 'persistence-api'
		exclude group: 'com.sun.mail', module: 'mailapi'
		exclude group: 'javax.mail', module: 'mailapi'
	}
}